--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/frontend/public/gossip.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/gossip.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gossip</title>
   </head>
